--- a/Run/services/MongoDB/Vagrantfile
+++ b/Run/services/MongoDB/Vagrantfile
@@ -4,6 +4,8 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "generic/debian10"
 
+  config.vm.network "forwarded_port", guest: 27017, host: 27017
+
   config.vm.provision "file", source: "mongod.conf", destination: "mongod.conf"
   config.vm.provision "shell", inline: "apt-get install --assume-yes gnupg"
   config.vm.provision "shell", inline: "wget --quiet --output-document=- https://www.mongodb.org/static/pgp/server-4.2.asc | apt-key add -"
