--- a/Run/services/MongoDB/Vagrantfile
+++ b/Run/services/MongoDB/Vagrantfile
@@ -15,4 +15,5 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: "cp /home/vagrant/mongod.conf /etc/mongod.conf"
   config.vm.provision "shell", inline: "systemctl restart mongod"
   config.vm.provision "shell", inline: "systemctl enable mongod"
+  config.vm.provision "shell", inline: "echo \"mongodbHostAndPort=`hostname -I | xargs`:27017\"", run: "always"
 end
